--- a/.glzr/zebar/starter/with-glazewm copy.html
+++ b/.glzr/zebar/starter/with-glazewm copy.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -24,24 +24,23 @@
     <div id="root"></div>
 
     <script type="text/babel" data-type="module">
-      import React, {
-        useState,
-        useEffect,
-      } from 'https://esm.sh/react@18?dev';
-      import { createRoot } from 'https://esm.sh/react-dom@18/client?dev';
-      import * as zebar from 'https://esm.sh/zebar@2';
+      import React, { useState, useEffect } from "https://esm.sh/react@18?dev";
+      import { createRoot } from "https://esm.sh/react-dom@18/client?dev";
+      import * as zebar from "https://esm.sh/zebar@2";
 
       const providers = zebar.createProviderGroup({
-        network: { type: 'network' },
-        komorebi: { type: 'komorebi' },
-        cpu: { type: 'cpu' },
-        date: { type: 'date', formatting: 'EEE d MMM t' },
-        battery: { type: 'battery' },
-        memory: { type: 'memory' },
-        weather: { type: 'weather' },
+        network: { type: "network" },
+        glazewm: { type: "glazewm" },
+        cpu: { type: "cpu" },
+        date: { type: "date", formatting: "EEE d MMM  tt" },
+        battery: { type: "battery" },
+        memory: { type: "memory" },
+        audio: { type: "aduio" },
+        weather: { type: "weather" },
+        media: { type: "media", refreshinterval: 3000 },
       });
 
-      createRoot(document.getElementById('root')).render(<App />);
+      createRoot(document.getElementById("root")).render(<App />);
 
       function App() {
         const [output, setOutput] = useState(providers.outputMap);
@@ -50,33 +49,83 @@
           providers.onOutput(() => setOutput(providers.outputMap));
         }, []);
 
+        // ensures title + artist doesnt exceed 70 chars
+        function stripMedia(title, artist) {
+          const ellipsis = "…";
+          const separator = " - ";
+          const maxLength = 73;
+
+          // Ensure default values
+          if (!title) title = "";
+          if (!artist) artist = "";
+
+          // Calculate the available length for title and artist
+          const separatorLength = separator.length;
+          const availableLength = maxLength - separatorLength;
+
+          // Truncate function
+          const truncate = (str, len) => {
+            if (str && typeof str === "string") {
+              if (str.length > len) {
+                return str.slice(0, len - ellipsis.length).trim() + ellipsis;
+              }
+              return str;
+            }
+            return "?";
+          };
+
+          // Short-circuit: If total length is within limit, no truncation needed
+          if (title.length + artist.length <= availableLength) {
+            return `${title}${separator}${artist}`;
+          }
+
+          // Start truncation loop
+          let truncatedTitle = truncate(title, availableLength);
+          let truncatedArtist = truncate(
+            artist,
+            availableLength - truncatedTitle.length
+          );
+
+          // Adjust if combined length still exceeds maxLength
+          while (
+            truncatedTitle.length + truncatedArtist.length + separatorLength >
+            maxLength
+          ) {
+            if (truncatedTitle.length > truncatedArtist.length) {
+              truncatedTitle = truncate(
+                truncatedTitle,
+                truncatedTitle.length - 1
+              );
+            } else {
+              truncatedArtist = truncate(
+                truncatedArtist,
+                truncatedArtist.length - 1
+              );
+            }
+          }
+
+          return `${truncatedTitle}${separator}${truncatedArtist}`;
+        }
+
         // Get icon to show for current network status.
         function getNetworkIcon(networkOutput) {
           switch (networkOutput.defaultInterface?.type) {
-            case 'ethernet':
+            case "ethernet":
               return <i className="nf nf-md-ethernet_cable"></i>;
-            case 'wifi':
+            case "wifi":
               if (networkOutput.defaultGateway?.signalStrength >= 80) {
                 return <i className="nf nf-md-wifi_strength_4"></i>;
-              } else if (
-                networkOutput.defaultGateway?.signalStrength >= 65
-              ) {
+              } else if (networkOutput.defaultGateway?.signalStrength >= 65) {
                 return <i className="nf nf-md-wifi_strength_3"></i>;
-              } else if (
-                networkOutput.defaultGateway?.signalStrength >= 40
-              ) {
+              } else if (networkOutput.defaultGateway?.signalStrength >= 40) {
                 return <i className="nf nf-md-wifi_strength_2"></i>;
-              } else if (
-                networkOutput.defaultGateway?.signalStrength >= 25
-              ) {
+              } else if (networkOutput.defaultGateway?.signalStrength >= 25) {
                 return <i className="nf nf-md-wifi_strength_1"></i>;
               } else {
                 return <i className="nf nf-md-wifi_strength_outline"></i>;
               }
             default:
-              return (
-                <i className="nf nf-md-wifi_strength_off_outline"></i>
-              );
+              return <i className="nf nf-md-wifi_strength_off_outline"></i>;
           }
         }
 
@@ -96,29 +145,29 @@
         // Get icon to show for current weather status.
         function getWeatherIcon(weatherOutput) {
           switch (weatherOutput.status) {
-            case 'clear_day':
+            case "clear_day":
               return <i className="nf nf-weather-day_sunny"></i>;
-            case 'clear_night':
+            case "clear_night":
               return <i className="nf nf-weather-night_clear"></i>;
-            case 'cloudy_day':
+            case "cloudy_day":
               return <i className="nf nf-weather-day_cloudy"></i>;
-            case 'cloudy_night':
+            case "cloudy_night":
               return <i className="nf nf-weather-night_alt_cloudy"></i>;
-            case 'light_rain_day':
+            case "light_rain_day":
               return <i className="nf nf-weather-day_sprinkle"></i>;
-            case 'light_rain_night':
+            case "light_rain_night":
               return <i className="nf nf-weather-night_alt_sprinkle"></i>;
-            case 'heavy_rain_day':
+            case "heavy_rain_day":
               return <i className="nf nf-weather-day_rain"></i>;
-            case 'heavy_rain_night':
+            case "heavy_rain_night":
               return <i className="nf nf-weather-night_alt_rain"></i>;
-            case 'snow_day':
+            case "snow_day":
               return <i className="nf nf-weather-day_snow"></i>;
-            case 'snow_night':
+            case "snow_night":
               return <i className="nf nf-weather-night_alt_snow"></i>;
-            case 'thunder_day':
+            case "thunder_day":
               return <i className="nf nf-weather-day_lightning"></i>;
-            case 'thunder_night':
+            case "thunder_night":
               return <i className="nf nf-weather-night_alt_lightning"></i>;
           }
         }
@@ -127,15 +176,21 @@
           <div className="app">
             <div className="left">
               <i className="logo nf nf-fa-windows"></i>
-
-              {output.komorebi && (
+              {output.glazewm && (
                 <div className="workspaces">
-                  {output.komorebi.currentWorkspaces.map(workspace => (
+                  {output.glazewm.currentWorkspaces.map((workspace) => (
                     <button
-                      className={`workspace ${workspace.name === output.komorebi.focusedWorkspace.name && 'focused'}`}
+                      className={`workspace ${
+                        workspace.hasFocus && "focused"
+                      } ${workspace.isDisplayed && "displayed"}`}
+                      onClick={() =>
+                        output.glazewm.runCommand(
+                          `focus --workspace ${workspace.name}`
+                        )
+                      }
                       key={workspace.name}
                     >
-                      {workspace.name}
+                      {workspace.displayName ?? workspace.name}
                     </button>
                   ))}
                 </div>
@@ -145,6 +200,35 @@
             <div className="center">{output.date?.formatted}</div>
 
             <div className="right">
+              {output.glazewm && (
+                <>
+                  {output.glazewm.bindingModes.map((bindingMode) => (
+                    <button
+                      className="binding-mode"
+                      key={bindingMode.name}
+                      onClick={() =>
+                        output.glazewm.runCommand(
+                          `wm-disable-binding-mode --name ${bindingMode.name}`
+                        )
+                      }
+                    >
+                      {bindingMode.displayName ?? bindingMode.name}
+                    </button>
+                  ))}
+
+                  <button
+                    className={`tiling-direction nf ${
+                      output.glazewm.tilingDirection === "horizontal"
+                        ? "nf-md-swap_horizontal"
+                        : "nf-md-swap_vertical"
+                    }`}
+                    onClick={() =>
+                      output.glazewm.runCommand("toggle-tiling-direction")
+                    }
+                  ></button>
+                </>
+              )}
+
               {output.network && (
                 <div className="network">
                   {getNetworkIcon(output.network)}
@@ -164,9 +248,7 @@
                   <i className="nf nf-oct-cpu"></i>
 
                   {/* Change the text color if the CPU usage is high. */}
-                  <span
-                    className={output.cpu.usage > 85 ? 'high-usage' : ''}
-                  >
+                  <span className={output.cpu.usage > 85 ? "high-usage" : ""}>
                     {Math.round(output.cpu.usage)}%
                   </span>
                 </div>
